<resources>
    <!--MAIN FRAGMENT-->
    <string name="app_name">АВАРКОМ</string>
    <string name="text_hello">Аварийный комиссар в Йошкар-Оле помощь при ДТП: ГИБДД12.рф</string>
    <string name="text_view_menu">Меню</string>
    <string name="text_view_call">Позвонить</string>
    <string name="dialog_permisson">Для правильной работы приложения разрешите доступ, спасибо</string>
    <string name="text_view_blocks_auto_helper">Блок подсказок водителю</string>
    <string name="my_team_avarkom">Наша команда аварийных комиссаров</string>
    <!--ABOUT COMPANY | ABOUT AVARKOM-->
    <string name="item_text_about">Стаж работы</string>
    <string name="item_text_name">ФИО</string>
    <string name="item_text_bio">Биография</string>
    <string name="item_text_raiting">Рейтинг аваркома</string>
    <string name="item_tittle_company">Свяжитесь с нами</string>
    <string name="item_contact_call">Контакты для связи</string>
    <string name="item_contact_call_about">+7 (8362) 709–709</string>
    <string name="item_contact_adress">Адрес подразделения</string>
    <string name="item_contact_contact_about">Адрес офиса</string>
    <string name="item_contact_work_time">Часы работы канцелярии</string>
    <string name="item_contact_time">Режим работы</string>
    <string name="company_organization">ООО Организация</string>
    <string name="job_name_avarkom">Аварийный комиссар</string>
    <string name="textview_open_detail_avarkom">Подробнее</string>
    <string name="sharing_apk">Поделиться приложением</string>
    <!--MENU-->
    <string name="sell">Скидки</string>
    <string name="game">Автошкола</string>
    <string name="news">Новости</string>
    <string name="company">О компании</string>
    <string name="check_auto">Проверка АВТО</string>
    <!--UPDATE APP-->
    <string name="downloading_percent_count">%1$d %%</string>
    <!--VK NEWS AND STOCKS FRAGMENT-->
    <string name="vk_news_block_textview">Новостной блок</string>
    <string name="vk_video_url">https://vk.com/video%1$d_%2$d</string>
    <string name="vk_news_item_time">Время публикации</string>
    <string name="like_vk_chips">Кол-во лайков</string>
    <string name="vk_view_post">просмотры</string>
    <string name="internet_vk_news_load">Загружаем....</string>
    <string name="vk_news_item_tittle_group_name">Название группы</string>
    <string name="no_internet_stock">Для загрузки скидки, подключите интернет</string>
    <string name="load_internet_stock">Уже лечу за скидками для Вас!</string>
    <string name="no_internet_vk_news">Нужна связь с космосом для обновления новостей</string>
    <!--YANDEX MAPS-->
    <string name="text_view_license_yandex_maps">Условия использования Яндекс.Карт</string>
    <string name="please_wait_downloading_end">Пожалуйста, дождитесь окончания загрузки</string>
    <string name="site_maps_yandex">https://yandex.ru/legal/maps_termsofuse</string>
    <string name="organization_data">ИП Ковалёва Ю.С.
 инн 121524178574 огрнип 316121500063612</string>
    <string name="contact_time">ПН–ПТ: 09:00–18:00
 СБ-ВС: Выходной</string>
    <string name="contact_address">ул. Красноармейская, 84а, офис 2
 Йошкар-ола, 424000, Россия</string>
    <!--Game-->
    <string name="result_testing_pdd">Результат тестирования ПДД</string>
    <string name="result_score">Количество правильных ответов: %1$d/%2$d</string>
    <string name="exit_game">Нажмите еще раз для выхода из игры</string>
    <!--Updater-->
    <string name="download_update_app">Скачивается обновление..</string>
    <string name="update_dialog_title">Обновление готово к установке</string>
    <string name="update_dialog_message">Обновить приложение?</string>
    <string name="update_dialog_install_button">Установить</string>
    <string name="update_dialog_postponed_button">Отложить</string>
    <!--Police status checking-->
    <string name="police_status_check_url">https://гибдд.рф/check/fines</string>
    <string name="ocago_status_check_url">https://гибдд12.рф/status</string>
    <string name="ocago_name_status">Проверка ОСАГО</string>
    <string name="gibdd_name_status">Проверка штрафов</string>
    <!--Promo-->
    <string name="promo_code_id">купон: %1$s</string>
    <string name="discount_1">Бензин</string>
    <string name="discount_2">Автозапчасти</string>
    <string name="discount_3">Автосервис</string>
    <string name="discount_4">Эвакуатор</string>
    <string name="poster_1_url">https://гибдд12.рф/img/photos/posters/1.jpg</string>
    <string name="poster_2_url">https://гибдд12.рф/img/photos/posters/2.jpg</string>
    <string name="poster_3_url">https://гибдд12.рф/img/photos/posters/3.jpg</string>
    <string name="no_internet_title">ВНИМАНИЕ!</string>
    <string name="no_internet_message">Для просмотра контента требуется подключение к интернету</string>
    <string name="no_internet_refresh_button">Обновить</string>
    <string name="no_internet_close_app">Выйти</string>
    <!--Game-->
    <string name="result_test_pdd">Результат тестирования ПДД</string>
    <string name="number_correct_answers">Количество правильных ответов:</string>
    <string name="official_traffic_tickets">Официальные билеты ПДД РФ</string>
    <string name="choose_level_game">Выберите свой уровень:</string>
    <string name="сheck_your_level">Проверить свой уровень</string>
    <string name="comments_answer_game">Комментарий к ответу</string>
    <string name="next_questions_game">Далее</string>
    <string name="null_level_game">Не определён</string>
    <string name="one_level_game">Чайник</string>
    <string name="two_level_game">Дачник</string>
    <string name="three_level_game">Гонщик</string>
    <string name="four_level_game">Водила</string>
    <string name="answer_game_item">Ответ</string>
    <string name="test_game_again">Пройти тест еще раз</string>
    <string name="no_internet_ok_button">OK</string>
    <string name="global_score_text_view">\Уровень знаний ПДД:\ </string>

</resources>