<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_fragment_about_company"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:hapticFeedbackEnabled="false"
            app:cardCornerRadius="@dimen/dp5"
            app:cardElevation="@dimen/dp5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp10"
                    android:layout_marginTop="@dimen/layout_margin_10dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/item_tittle_company"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp26"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_text_contact_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp5"
                    android:layout_marginStart="@dimen/dp5"
                    android:text="@string/item_contact_call"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_tittle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_text_contact_work_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp5"
                    android:text="@string/item_contact_work_time"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_tittle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_text_contact_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp1"
                    android:text="@string/item_contact_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_text_contact_work_time" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_text_contact_call_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp5"
                    android:paddingTop="@dimen/dp1"
                    android:text="@string/item_contact_call_about"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_text_contact_call" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_text_contact_adress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp5"
                    android:text="@string/item_contact_adress"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_text_contact_time" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_text_contact_contact_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp5"
                    android:layout_marginStart="@dimen/dp5"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp1"
                    android:text="@string/item_contact_contact_about"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_text_contact_adress" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:hapticFeedbackEnabled="false"
            app:cardCornerRadius="@dimen/dp5"
            app:cardElevation="@dimen/dp5">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="КАРТА"
                android:textSize="@dimen/dp26" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_company"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp5"
            android:hapticFeedbackEnabled="false"
            app:cardCornerRadius="@dimen/dp5"
            app:cardElevation="@dimen/dp5">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/company_face"
                android:textSize="@dimen/sp12_text" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>