<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp5"
    tools:context=".ui.main.MainFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.geekbrains.gibddyola.utils.EquilateralImageView
            android:id="@+id/image_view_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dp5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="@dimen/dp5"
            android:paddingEnd="@dimen/dp5"
            android:text="@string/text_hello"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_main" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tooltip_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp3"
            android:elevation="@dimen/dp5"
            app:cardBackgroundColor="@color/light_blue_300"
            app:cardCornerRadius="@dimen/dp5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_hello">

            <TextView
                android:id="@+id/text_tooltip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp5"
                android:textColor="@color/black"
                tools:text="@string/text_view_blocks_auto_helper" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/my_team_avarkom"
            android:textColor="@color/red_600"
            android:textSize="17sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_list_avarkom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tooltip_layout" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/transparent_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:animateLayoutChanges="true"
        android:background="@color/white"
        android:foregroundGravity="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="@dimen/dp26" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/option_one_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:alpha="0"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/dp32"
            android:paddingBottom="@dimen/dp32"
            android:visibility="invisible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/test_text_view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom"
                android:layout_marginEnd="@dimen/dp26"
                android:background="@color/black"
                android:padding="@dimen/dp5"
                android:text="@string/game"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_game" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/option_two_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:alpha="0"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/dp32"
            android:paddingBottom="@dimen/dp32"
            android:visibility="invisible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/test_text_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom"
                android:layout_marginEnd="@dimen/dp26"
                android:background="@color/black"
                android:padding="@dimen/dp5"
                android:text="@string/sell"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_stock" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/option_three_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:alpha="0"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/dp32"
            android:paddingBottom="@dimen/dp32"
            android:visibility="invisible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/test_text_view3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom"
                android:layout_marginEnd="@dimen/dp26"
                android:background="@color/black"
                android:padding="@dimen/dp5"
                android:text="@string/news"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_news" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/option_four_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:alpha="0"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/dp32"
            android:paddingBottom="@dimen/dp32"
            android:visibility="invisible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/test_text_view4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom"
                android:layout_marginEnd="@dimen/dp26"
                android:background="@color/black"
                android:padding="@dimen/dp5"
                android:text="@string/company"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_company" />
        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/dp16"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/gray_green_500"
            android:elevation="@dimen/dp5"
            app:fabCustomSize="@dimen/fab_main_size_custom" />

        <ImageView
            android:id="@+id/fab_main_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/dp21"
            android:layout_marginBottom="17dp"
            android:elevation="@dimen/dp10"
            app:srcCompat="@drawable/ic_setting" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_fab_main_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/yellow_600"
            android:elevation="@dimen/dp5"
            app:fabCustomSize="@dimen/fab_main_size_custom" />

        <ImageView
            android:id="@+id/fab_main_image_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="94dp"
            android:layout_marginBottom="17dp"
            android:elevation="@dimen/dp10"
            app:srcCompat="@drawable/ic_hot_sale" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_fab_main_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/red_600"
            android:elevation="@dimen/dp5"
            app:fabCustomSize="@dimen/fab_main_size_custom" />

        <ImageView
            android:id="@+id/fab_main_image_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="17dp"
            android:elevation="@dimen/dp10"
            app:srcCompat="@drawable/ic_sos_call" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>