<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_fragment_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vk_background_color_gray">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_detail_avarkom"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:cardCornerRadius="@dimen/dp5"
        app:cardElevation="@dimen/dp5"
        app:layout_constraintBottom_toTopOf="@+id/item_text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/dp3"
            android:paddingBottom="@dimen/dp3">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/logo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:paddingStart="@dimen/dp5"
        android:text="@string/item_text_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_detail_avarkom" />

    <View
        android:id="@+id/bottom_sheet_line_one"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        android:background="@color/color_gray_transparent"
        app:layout_constraintBottom_toBottomOf="@+id/item_text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_text_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_text_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:padding="@dimen/dp5"
        android:paddingStart="@dimen/dp5"
        android:text="@string/item_text_bio"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_text_name" />

    <View
        android:id="@+id/bottom_sheet_line_two"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        android:background="@color/color_gray_transparent"
        app:layout_constraintBottom_toBottomOf="@+id/item_text_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_text_bio" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_text_job_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:paddingStart="@dimen/dp5"
        android:text="@string/item_text_about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_text_bio" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginBottom="@dimen/dp16"
        android:backgroundTint="@color/amber_orange_500"
        android:elevation="@dimen/dp5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/sym_action_call">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>